# market_research-AI-Agent

./: .gitignore  README.md  pyproject.toml
src/market_research_crew/: crew.py  main.py
